--- a/app_adapter/src/main/resources/application.properties
+++ b/app_adapter/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=app_adapter
+
+# Configuração do MongoDB Atlas
+spring.data.mongodb.uri=mongodb+srv://adapterUser:D9UsVOb5ghxJqxPV@adaptercluster.idvys.mongodb.net/adaptercluster?retryWrites=true&w=majority&appName=adapterCluster
+
