--- a/app_adapter/src/main/resources/application.properties
+++ b/app_adapter/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.application.name=app_adapter
 # Configuração do MongoDB Atlas
 spring.data.mongodb.uri=mongodb+srv://adapterUser:D9UsVOb5ghxJqxPV@adaptercluster.idvys.mongodb.net/adaptercluster?retryWrites=true&w=majority&appName=adapterCluster
 
+# Configura a localização padrão dos templates (Thymeleaf, Freemarker, etc.)
+spring.web.resources.template-location=classpath:/templates/
+
+# Configura a localização padrão dos arquivos estáticos (CSS, JS, imagens)
+spring.web.resources.static-locations=classpath:/static/
