Reset de senha com email

--- a/app_adapter/src/main/resources/application.properties
+++ b/app_adapter/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.application.name=app_adapter
 spring.data.mongodb.uri=mongodb+srv://adapterUser:D9UsVOb5ghxJqxPV@adaptercluster.idvys.mongodb.net/adaptercluster?retryWrites=true&w=majority&appName=adapterCluster
 
 logging.level.org.mongodb.driver=DEBUG
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bancoadapter@gmail.com
+spring.mail.password=yrMksFSz
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
